title = "fashionfail"

[owner]
name = "Riza Velioglu"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
name = "fashionfail"
version = "0.1.0"
description = "Official Repository of FashionFail paper"
requires-python = ">=3.8"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["dataset", "ecommerce", "clothing parsing", "object detection", "instance segmentation"]
authors = [
  {name = "Riza Velioglu", email = "rvelioglu@techfak.uni-bielefeld.de"}
]
maintainers = [
  {name = "Riza Velioglu", email = "rvelioglu@techfak.uni-bielefeld.de"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 3 - Alpha",
]
dependencies = []


[project.optional-dependencies]
dev = [
  "pip-tools>=6.12.2",
  "pre-commit>=3.3.2",
  "pytest-cov>=4.0.0",
  "pytest>=7.2.0",
  "numpy>=1.24.3",
  "loguru>=0.7.0",
  "matplotlib>=3.7.1",
  "pandas>=2.0.3",
  "pillow>=9.5.0",
  "pycocotools>=2.0.6",
  "supervision>=0.13.0",
  "tk>=8.6.12",
  "tqdm>=4.65.0",
  "torchmetrics>=1.1.0",
  "fiftyone>=0.22.0",
  "fiftyone-db-ubuntu2204>=0.4.0",
  "datasets>=2.16.1",
]

[project.urls]
Homepage = ""
Repository = "https://github.com/rizavelioglu/fashionfail.git"
Issues = "https://github.com/rizavelioglu/fashionfail/issues"
"Bug Tracker" = "https://github.com/rizavelioglu/fashionfail/issues"
